fixing sweet alert custom design not showing

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,43 @@
   margin: 0 auto;
   /* background-color: aquamarine; */
 }
+
+.swal2-popup {
+  background-color: #6b0f2c !important;
+  color: #e7e4e4 !important;
+}
+.swal2-icon {
+  border-color: #fff;
+  color: #fff;
+}
+.swal2-icon.swal2-warning {
+  background-color: #ef3b4f !important;
+  color: #fff !important;
+  border: 1px solid !important;
+  border-color: #fff;
+}
+.swal2-title {
+  font-size: unset !important;
+  color: #e7e4e4 !important;
+}
+.swal2-input {
+  outline: none !important;
+  border: 1px solid #fff !important;
+  /* // border-bottom: 1px solid #fff; */
+}
+.swal2-input:focus {
+  outline: none !important;
+  border: 1px solid #fff !important;
+  box-shadow: none !important;
+  /* // border-bottom: 1px solid #fff; */
+}
+.swal2-styled.swal2-confirm {
+  background-color: #2b77c0 !important;
+}
+.swal2-styled.swal2-cancel {
+  background-color: #d33 !important;
+}
+.swal2-popup.swal2-toast {
+  background-color: #6b0f2c !important;
+  color: #e7e4e4 !important;
+}
